--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@capacitor/app": "1.1.1",
     "@capacitor/core": "3.5.1",
+    "@capacitor/google-maps": "^1.0.0",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
+    "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "vue": "^3.2.21",
     "vue-router": "^4.0.12"
